--- a/public/index.css
+++ b/public/index.css
@@ -5,13 +5,12 @@
 @import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Inter:wght@300;400&family=Paytone+One&family=Suravaram&display=swap');
 
 html, body, main {
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   margin: 0;
   min-width: 320px;
-  max-width: 100%
+  /* max-width: 100% */
 }
-
 
 /* The Universal Selector */
 *, /* All elements*/
@@ -38,8 +37,18 @@ body {
 
 a:link {
   text-decoration: none;
+  
+}
+
+p {
+  font-size: 1.2rem;
 }
 
 button {
   border: none;
+}
+
+footer {
+  padding: 10px;
+  height: 50px;
 }
