--- a/src/components/EditCocktail/EditCocktail.module.css
+++ b/src/components/EditCocktail/EditCocktail.module.css
@@ -1,24 +1,23 @@
 
 .cocktailFormContainer {
-  width: 100%;
+  width: auto;
+  border-radius: 5px;
   border-top: 1px solid rgb(110, 58, 67);
   border-bottom: 1px solid rgb(110, 58, 67);
-  margin: 1rem 0;
   /* height: 200px; */
 }
 
-.cocktailForm {
+.editCocktailForm {
   background-color: rgb(6, 13, 15);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   text-align: center;
-  padding: 1rem;
-  
+  width: auto;
 }
 
-.newCocktailNameInput {
+.editCocktailNameInput {
   background-color: rgb(37, 37, 37);
   border: 1px solid rgb(121, 62, 72);
   border-radius: 5px;
@@ -34,7 +33,7 @@
   outline: none;
 }
 
-.newCocktailContentInput {
+.editCocktailContentInput {
   background-color: rgb(37, 37, 37);
   border: 1px solid rgb(121, 62, 72);
   border-radius: 5px;
@@ -45,21 +44,30 @@
   min-width: 25rem;
 }
 
-.newCocktailContentInput:focus {
+.editCocktailContentInput:focus {
   background-color: rgb(131, 130, 130);
   color: rgb(121, 62, 72);
   outline: none;
 }
 
-.newCocktailBtn {
+.editCocktailBtn, 
+.cancelEditCocktailBtn {
   background-color: rgb(0, 0, 0);
   border: 1px solid rgb(110, 58, 67);
-  border-radius: 5px;
   color: rgb(231, 231, 231);
   height: 2.5rem;
   font-size: 1.2rem;
   letter-spacing: 2px;
-  margin: 1rem auto;
   padding: 0;
   width: 20rem;
+}
+
+.cancelEditCocktailBtn {
+  border-radius: 5px 5px 0 0;
+  margin: 1.5rem auto .5rem;
+ }
+
+.editCocktailBtn { 
+  border-radius: 0 0 5px 5px;
+  margin: 0 auto 1.5rem;
 }
