--- a/src/pages/BarDetails/BarDetails.module.css
+++ b/src/pages/BarDetails/BarDetails.module.css
@@ -1,26 +1,23 @@
 .barDetailPage {
-  margin: 0;
-  height: 100vh;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
+  padding: 0px 10rem;
 }
-
-/* p, a {
-  font-size: 1.2rem;
-} */
 
 /* .resultsBtnContainer {
   height: 50px;
 } */
 
 .locationCard {
+  background-color: rgb(6, 13, 15);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  height: 90vh;
   margin: 0px auto;
-  width: 90vw;
+  padding: 1rem;
+  /* width: 90vw; */
 }
 
 /* .backgroundLayer {
@@ -35,18 +32,18 @@
 
 .locationInfoGrid {
   display: grid;
-  grid-template-columns: 75% auto;
-  grid-auto-rows: minmax(min-content, max-content);
+  grid-template-columns: minmax(min-content);
+  grid-auto-rows: minmax(min-content);
   grid-template-areas:
     "one two"
     "three four"
     "five six";
   column-gap: 1rem;
   height: auto;
-  align-items: center;
+  align-items: start;
   justify-self: end;
   justify-items: start;
-  margin: .2rem 0 0 2rem;
+  margin: .2rem 0 0 0;
   width: 100%;
 }
 
@@ -55,49 +52,57 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  height: 40%;
-  margin: 0 auto;
-  min-width: 100%;
-  max-width: 100%;
+  margin: none;
+  width: 100%;
   justify-self: start;
   object-fit: scale-down;
+  border: 1px solid rgb(110, 58, 67);
 }
 
 .locationName {
+  border-top: 1px solid rgb(110, 58, 67);
+  border-bottom: 1px solid rgb(110, 58, 67);
   /* border-top: rgb(43, 65, 78) 1px solid;
   border-bottom: rgb(43, 65, 78) 1px solid; */
   font-size: 1.7rem;
-  max-width: 100%;
-  padding-top: 5px;
-  margin: 0;
+  min-width: 100%;
+  padding-top: 2px;
+  margin: .8rem 0;
 }
 
 .locationLocation {
   grid-area: one;
-  padding-left: 10px;
+  margin: .5rem 0;
 }
 
 .locationPhone {
   grid-area: three;
-  padding-left: 10px;
+  margin: .5rem 0;
 }
 
 .locationOPen {
   grid-area: five;
-  padding-left: 10px;
+  margin: .5rem 0;
 }
 
 .locationRating {
   grid-area: two;
+  justify-self: end;
+  margin: .5rem 0;
 }
 
 .locationPrice {
   grid-area: four;
+  justify-self: end;
+  margin: .5rem 0;
 }
 
 .locationLink {
   grid-area: six;
-  padding: 0 9px 0 0;
+  /* padding: 0 9px 0 0; */
+  justify-self: end;
+  margin: .5rem 0;
+  font-size: 1.2rem;
 }
 
 /* .locationLink:hover {
@@ -113,40 +118,51 @@
   height: 30px;
   font-size: 1.5rem;
   letter-spacing: 2px;
-  margin: 15px 0 2px 0;
+  margin: 5px 0 10px 0;
   padding: 2px;
+  height: 25px;
   width: 150px;
 }
 
-.resultsBtn:hover{
-  background-color: rgb(184, 182, 182);
-  color: rgb(0, 0, 0);
-}
-
 .cocktailContainer {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
+  grid-auto-rows: 1fr;
+  row-gap: 1.3rem;
+  column-gap: 1.3rem;
   align-items: center;
+  justify-content: center;
   width: 100%;
+  height: auto;
+  margin: 0 auto 1rem auto;
+  padding-bottom: 2rem;
 }
 
 .cocktailComment {
+  background-color: rgb(6, 13, 15);
+  border-bottom: 1px solid rgb(3, 8, 9);
+  border-left: 1px solid rgb(3, 8, 9);
+  border-radius: 5px;
   display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
+  flex-direction: row;
+  align-items:center;
+  justify-content: space-between;
+  padding: 1rem;
 }
 
 .cocktailCommentText {
   display: flex;
   flex-direction: column;
-  height: 40px;
+  font-size: 1.2rem;
+  /* height: 40px; */
 }
 
 .editBtnContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-right: 1rem;
+  align-items: center;
+  margin: 0 1rem;
 }
 
 .deleteCocktailBtn {
@@ -155,16 +171,10 @@
   border-radius: 5px 5px 0 0;
   color: rgb(231, 231, 231);
   height: 20px;
-  font-size: 1.1rem;
+  font-size: 1rem;
   letter-spacing: 2px;
-  margin: 15px 0 0px 0;
-  padding: 2px;
-  width: 70px;
-}
-
-.deleteCocktailBtn:hover{
-  background-color: rgb(184, 182, 182);
-  color: rgb(0, 0, 0);
+  padding: 1.5px;
+  width: 100%;
 }
 
 .editCocktailBtn {
@@ -173,18 +183,57 @@
   border-radius: 0px 0px 5px 5px;
   color: rgb(231, 231, 231);
   height: 20px;
-  font-size: 1.1rem;
+  font-size: 1rem;
   letter-spacing: 2px;
   margin: 5px 0 2px 0;
-  padding: 2px;
-  width: 70px;
-}
-
-.editCocktailBtn:hover{
-  background-color: rgb(184, 182, 182);
-  color: rgb(0, 0, 0);
+  padding: 1.5px;
+  width: 100%;
 }
 
 .cocktailText {
   line-height: 1px;
+}
+
+
+@media only screen and (max-width: 700px) {
+
+  .barDetailPage {
+    padding: 0px 3rem;
+  }
+  
+  .cocktailContainer {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  .cocktailComment {
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+}
+
+/* Hover effects only on wider screens, not for mobile */
+@media only screen and (min-width: 700px) { 
+
+  .resultsBtn:hover{
+    background-color: rgb(184, 182, 182);
+    color: rgb(0, 0, 0);
+  }
+
+  .deleteCocktailBtn:hover{
+    background-color: rgb(184, 182, 182);
+    color: rgb(0, 0, 0);
+  }
+
+  .editCocktailBtn:hover{
+    background-color: rgb(184, 182, 182);
+    color: rgb(0, 0, 0);
+  }
 }
