--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -2,8 +2,6 @@
 
 main {
   margin: 0;
-  /* overflow: hidden; */
-  height: 50vh;
 }
 
 h2 {
@@ -27,8 +25,10 @@ h1 {
   display: flex;
   align-items: center;
   flex-direction: column;
-  height: 60%;
+  height: 100%;
   margin-bottom: 0;
+  position: relative;
+  min-height: calc(100vh - 73px);
 }
 
 .inVibe {
