--- a/src/pages/SearchLocations/SearchLocations.module.css
+++ b/src/pages/SearchLocations/SearchLocations.module.css
@@ -1,6 +1,7 @@
 .searchLocationBody {
   margin: 0 auto;
-  /* min-height: 100vh; */
+  height: 100%;
+  min-height: calc(100vh - 113px);
 }
 
 .searchContainer {
