--- a/src/pages/Signup/Signup.module.css
+++ b/src/pages/Signup/Signup.module.css
@@ -2,5 +2,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  position: relative;
+  min-height: calc(100vh - 73px);
 }
   
